--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@google/generative-ai": "^0.24.1",
     "canvas": "^3.2.1",
     "html2canvas": "^1.4.1",
+    "lucide-react": "^0.575.0",
     "next": "16.1.4",
     "pdfjs-dist": "^5.4.530",
     "qrcode.react": "^4.2.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-pdf": "^10.3.0"
+    "react-pdf": "^10.3.0",
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@types/node": "^20",
